--- a/css/postpage.css
+++ b/css/postpage.css
@@ -8,104 +8,212 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+    font-family:  poppins, sans-serif;
     letter-spacing: 1px;
 }
-/*html, body{
-    height: 100%;
-    overflow-y: hidden;
-}*/
-header{
-    padding:20px 0;
+body{
+    background-color: #f0edeb;
 }
-.center{
+.header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    padding: 1.3rem 10%;
     display: flex;
-    flex-wrap: wrap;
-    max-width: 1280px;
-    margin: 0 auto;
-    padding: 0 2%;
+    justify-content: space-between;
+    align-items: center;
+    z-index: 100;
 }
-.logo img{
-    width: 50%;
+
+.header::before{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
     height: 100%;
+    background: rgba(0, 0, 0, .1);
+    backdrop-filter: blur(50px);
+    z-index: -1;
+}
+.header::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: -100%;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(90deg, trasparent, rgba(255, 255, 255, .4), trasparent);
+    transition: .5s;
+}
+.header:hover::after{
+    left: 100%;
+}
+.card img{
+    width: 720px;
+    height: 440px;
+    background-size: cover;
+    border-radius: 15px 15px 15px 0;
+
 }
 .logo{
-   background: rgba(252,252,252,255);
-}
-.menu{
-    padding-top: 30px;
-    width: 50%;
-    text-align: right;
-    background: rgba(252,252,252,255);
-}
-.menu a{
+    font-size: 2rem;
     color: black;
     text-decoration: none;
-    font-weight: bold;
-    margin-right: 15px;
+    font-weight: 700;
+}
+.card {
+    font-size: 19px;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+    max-width: 720px;
+}
+.spann{
+    font-size: 20px;
+    color: black;
+    text-decoration: none;
+    font-weight: 700;
+}
+.navbar a{
+    font-size: 1.15rem;
+    color: black;
+    text-decoration: none;
+    font-weight: 600;
+    margin-left: 2.5rem;
 
 }
-main{
-    background: rgba(252,252,252,255);
-    height: 100%;
-    width: 100%;
+.icons{
+    position: absolute;
+    right: 5%;
+    font-size: 2.8rem;
+    color: #fff;
+    cursor: pointer;
+    display: none;
+
+}
+#check{
+    display: none;
+}
+
+@media (max-width: 992px){
+    .header{
+        padding: 1.3rem 5%;
+    }
+}
+@media (max-width: 768px){
+    .icons{
+        display: inline-flex;
+
+    }
+
+    #check:checked~.icons #menu-icon{
+        display: none;
+    }
+
+    .icons #close-icon{
+        display: none;
+    }
+
+    #check:checked~.icons #close-icon{
+        display: block;
+    }
+
+    .navbar{
+        position: absolute;
+        top: 100%;
+        left: 0;
+        width: 100%;
+        height: 0;
+        background:rgba(0, 0, 0, .1);
+        backdrop-filter: blur(50px);
+        box-shadow: 0 .5rem 1rem (0, 0, 0, .1);
+        overflow: hidden;
+        transition: .3s ease;
+
+    }
+
+    #check:checked~.navbar {
+        height: 17.1rem;
+    }
+
+    .navbar a{
+        display: block;
+        font-size: 1.1rem;
+        margin: 1.5rem 0;
+        text-align: center;
+        transform: translateY(-50px);
+        opacity: 0;
+        transition: .3s ease;
+    }
+
+    #check:checked~.navbar a {
+        transform: translateY(0);
+        opacity: 1;
+        transition-delay: calc(.15s * var(--i));
+    }
+}
+
+
+
+.container{
     display: flex;
     justify-content: center;
-    align-items: center;
-    color: #434343;
+    flex-wrap: wrap;
+    padding-top: 130px;
+}
+.card{
+    background: #e0dede;
+    width: 722px;
+    margin: 20px;
+    border-radius: 15px;
+    height: auto;
+    padding: px;
+
 }
 
-
-main.cards{
-    display: flex;
-    padding: 40px;
-    margin: 40px;
+.card p{
+    padding: 30px;
+    font-weight: 400px;
 }
-main.cards section.card{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.data{
+    padding: 20px;
+}
+.card h3{
+    padding: 25px;
+}
+.spann {
+    padding: 25px;
+}
+.data{
+    padding: 25px;
+}
+.card:hover{
+    background-color: rgba(0, 0, 0, .1);
+    transform: scale(1.03);
+    transition: all 1s ease;
+}
+.card a{
+    background-color: #0e0c0c;
+    color: white;
+    padding: 15px 20px;
+    display: block;
     text-align: center;
-    background:rgba(252,252,252,255);
-    padding: 1rem 1.5rem;
-    border-radius: 8px;
-    max-height: 256px;
-    margin-left: 32px;
-    padding-bottom: 300px;
-    max-width: 250px;
-
-
+    margin:15px 270px;
+    border-radius: 15px;
+    list-style: none;
+    text-decoration: none;
+    padding: 20px;
 }
-main.cards section.card:first-child{
-    margin-left: 0;
-}
-main.cards section.card .icon{
-    width: 150px;
-    height: 150px;
-}
-
-main.cards section.card img{
-    width: 100%;
-}
-main.cards section.card button{
-    padding: 0.5rem 0.5rem;
-    text-transform: uppercase;
-    border-radius: 292px;
-    border: 0;
-    cursor: pointer;
-    font-size: 80%;
-    font-weight: 400;
-    margin: 10px;
-    background: linear-gradient(to right, #fcfcfc , gray);
-}
-#post-content{
-    padding-top: 50px;
-    padding-bottom: 50px;
+main{
+    height: 15vh;
 }
 footer {
     width: 100%;
     color: var(--color-neutral-40);
     text-decoration: none;
+    list-style: none;
 }
 #footer-link{
     text-decoration: none;
@@ -118,14 +226,18 @@ footer {
 }
 #footer-contato h1{
     margin-bottom: 0.75rem;
-    background-color: var(--color-neutral-10);
 }
-#footer-social-media{
+#footer-contato p{
+    font-weight: 600;
+}
+
+#footer-social-media {
     display: flex;
     gap: 2rem;
     margin-top: 1.5rem;
 }
-#footer social-media .footer-link{
+
+#footer-social-media .footer-link{
     display: flex;
     align-items: center;
     justify-content: center;
@@ -133,24 +245,96 @@ footer {
     width: 2.5rem;
     color: var(--color-neutral-40);
     border-radius: 50%;
-}
-#footer social-media .footer-link:hover {
-    opacity: 0.7;
-}
-.footer-lista li{
-    background-color: var(--color-neutral-10);
+    transition: all 0.4s;display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
     text-decoration: none;
 }
-#rodape{
-    background-color: var(--color-neutral-10);
+
+#footer-social-media .footer-link i{
+    font-size: 1.25rem;
 }
-#footer-inscricao{
-    background-color: var(--color-neutral-10);
+
+#footer-social-media .footer-link:hover {
+    opacity: 0.8;
 }
-#footer-inscricao{
-    background-color: var(--color-neutral-10);
+.footer-lista {
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+    text-decoration: none;
 }
-.span{
-    padding-top: 50px;
-    padding-left: 50px;
+
+.footer-lista .footer-link{
+    color: var(--color-neutral-30);
+    transition: all 0.4s;
+    display: flex;
+    flex-direction: column;
+    gap: 0.75rem;
+    list-style: none;
+    text-decoration: none;
+}
+
+.footer-lista .footer-link:hover{
+    color: #7f37c9;
+}
+
+#footer-inscricao {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+}
+#footer-inscricao p{
+    color: var(--color-neutral-30);
+}
+
+#input-grupo{
+    display: flex;
+    align-items: center;
+    background-color: var(--color-neutral-0);
+    border-radius: 4px;
+}
+
+#input-grupo input{
+    all: unset;
+    padding: 0.75rem;
+    width: 100%;
+
+}
+#input-grupo button{
+    background-color: #7f37c9;
+    border: none;
+    color: var(--color-neutral-40);
+    padding: 0px 1.25rem;
+    font-size: 1.125rem;
+    height: 100%;
+    border-radius: 0px 4px 4px 0px;
+    cursor: pointer;
+    transition: all 0.4s;
+
+}
+#input-grupo button:hover{
+    opacity: 0.8;
+}
+#footer-copyright{
+    display: flex;
+    justify-content: center;
+    background-color: var(--color-neutral-0);
+    font-size: 0.9rem;
+    padding: 1.5rem;
+    font-weight: 100;
+}
+@media screen and (max-width:768px) {
+    #conteudo-footer {
+        grid-template-columns: repeat(2, 1fr);
+        gap: 2rem;
+    }   
+}
+@media screen and (max-width:426px) {
+    #conteudo-footer {
+        grid-template-columns: repeat(1, 1fr);
+        padding: 3rem 2rem;
+    }   
 }
